<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_primary_blue"
    tools:context=".SignInActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="190dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/applogowhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintEnd_toStartOf="parent"
        android:background="@drawable/bg_layout_white">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:fontFamily="@font/mlight"
                android:text="@string/username_label"
                android:textSize="20sp"
                android:textColor="@color/grayPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/usernamex"
                android:background="@drawable/bg_input_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/mmedium"
                android:paddingLeft="12dp"
                android:lines="1"
                android:textColor="@color/blackPrimary"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:fontFamily="@font/mlight"
                android:text="@string/password_label"
                android:textSize="20sp"
                android:textColor="@color/grayPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/passwordx"
                android:background="@drawable/bg_input_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/mmedium"
                android:paddingLeft="12dp"
                android:lines="1"
                android:textColor="@color/blackPrimary"
                android:inputType="textPassword"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_signin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_blue_primary"
            android:fontFamily="@font/mmedium"
            android:text="@string/signin"
            android:textColor="#FFF"
            android:textSize="22sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_new_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/mlight"
        android:text="Create New Account"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>